:lipstick: fix alignment on mobile for contract address

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3668,4 +3668,6 @@ ul.stars li::before {
 
 .hex {
   font-family: monospace, sans-serif;
+  word-break: break-all;
+  display: block;
 }
